# py-astnc

./: .gitignore  README.md  pyproject.toml
docs/: notes.md
examples/: basic_ring.py  compare_methods.py  grid3x3_workpoints.py
src/astnc/: __init__.py  api.py  contract.py  errors.py  generators.py  materialize.py  types.py  workpoints.py
src/astnc/internal/: __init__.py  algorithms.py  blocking.py  cache.py  linalg.py  network.py  partition.py  state.py
tests/: test_api_basic.py  test_cache_semantics.py  test_exact_vs_astnc.py  test_workpoints.py
