[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astnc"
version = "0.1.0"
description = "Approximate tensor-network contraction with exact and adaptive ASTNC baselines."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kaiyu Shen" }]
keywords = ["tensor-network", "contraction", "approximation", "linear-algebra"]
dependencies = [
  "networkx>=3.0",
  "numpy>=1.24",
  "opt_einsum>=3.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
